# Vaulth

./: .env.example  .gitignore  Cargo.toml  README.md  schema.sql  sqlx-data.json  vaulth.example.json  vaulth.example.json5
.github/workflows/: build.yml  tests.yml
migrations/: 20200816205122_schema.sql
src/: config.rs  db.rs  errors.rs  hash.rs  jwt.rs  main.rs  password.rs  token.rs  utils.rs
src/providers/: discord.rs  github.rs  google.rs  mod.rs  oauth.rs  oauth2.rs
src/routes/: key.rs  mod.rs  token.rs  users.rs
