[package]
name = "vaulth"
version = "0.1.0"
authors = ["Raphaël Thériault <raphael_theriault@outlook.com>"]
edition = "2018"
license = "Apache-2.0"

[dependencies]
anyhow = "1.0.31"
chrono = { version = "0.4.11", features = ["serde"] }
env_logger = "0.7.1"
jsonwebtoken = "7.2.0"
log = { version = "0.4.8", features = ["serde"] }
rand = "0.7.3"
reqwest = "0.10.6"
rust-argon2 = "0.8.2"
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.55"
sqlx = { version = "0.3.5", features = ["chrono", "runtime-tokio"], default-features = false }
tokio = { version = "0.2.21", features = ["blocking", "fs", "macros", "rt-threaded"] }
warp = { version = "0.2.3", features = ["tls"], default-features = false }

[target.'cfg(not(any(target_os = "windows", target_os = "macos", target_os = "ios")))'.dependencies]
openssl-sys = { version = "0.9", features = ["vendored"] }

[features]
postgres = ["sqlx/postgres"]
mysql = ["sqlx/mysql"]
