[package]
name = "vaulth"
version = "0.1.0"
authors = ["Raphaël Thériault <raphael_theriault@outlook.com>"]
edition = "2018"
license = "Apache-2.0"
description = "Just a flexible authentication server"

[dependencies]
anyhow = "1.0.31"
chrono = { version = "0.4.13", features = ["serde"] }
jsonwebtoken = "7.2.0"
rand = "0.7.3"
reqwest = { version = "0.10.6", features = ["json"] }
rust-argon2 = "0.8.2"
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.56"
sqlx = { version = "0.3.5", features = ["chrono", "macros", "runtime-tokio"], default-features = false }
tokio = { version = "0.2.21", features = ["blocking", "fs", "macros", "rt-threaded"] }
tracing = "0.1.16"
tracing-futures = "0.2.4"
tracing-subscriber = "0.2.8"
warp = { version = "0.2.4", features = ["tls"], default-features = false }

[features]
postgres = ["sqlx/postgres"]
mysql = ["sqlx/mysql"]
