[package]
name = "vaulth"
version = "0.1.0"
authors = ["Raphaël Thériault <raphael_theriault@outlook.com>"]
edition = "2018"
license = "Apache-2.0"
description = "Just a flexible authentication server"

[dependencies]
anyhow = "1.0.32"
chrono = { version = "0.4.15", features = ["serde"] }
derivative = "2.1.1"
jsonwebtoken = "7.2.0"
rand = "0.7.3"
reqwest = { version = "0.10.7", features = ["json"] }
rust-argon2 = "0.8.2"
serde = { version = "1.0.115", features = ["derive"] }
serde_json = "1.0.57"
sqlx = { version = "0.4.0-beta.1", features = [
    "chrono",
    "macros",
    "migrate",
    "offline",
    "postgres",
    "runtime-tokio-rustls",
], default-features = false }
tokio = { version = "0.2.22", features = ["blocking", "fs", "macros", "rt-threaded"] }
tracing = "0.1.19"
tracing-futures = "0.2.4"
tracing-subscriber = "0.2.11"
warp = { version = "0.2.4", features = ["tls"], default-features = false }
